# vulkan-cocoa-core

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md
.github/workflows/: c-cpp.yml  msbuild.yml
Backend/include/: QuartzMetalBackend.h
Backend/src/: QuartzMetalBackend.cpp
DarlingAppKit/: AppKitClasses.m  CMakeLists.txt
DarlingAppServices/: AppServicesClasses.m  CMakeLists.txt
DarlingMetal/: CMakeLists.txt
DarlingMetal/include/: MTLDevice.h  Metal.h
DarlingMetal/src/: MTLClasses.m  MTLDevice.m
DarlingQuartzCore/: CAMetalLayer.m  CMakeLists.txt  QuartzCoreClasses.m
Demo3D/: CMakeLists.txt  test_metal.m
DemoPaint/: CMakeLists.txt  test_paint.m
DemoSwapchain/: CMakeLists.txt  Metal.h  test_metal.m
DemoSwapchain/include/: MTLDevice.h
Frameworks/AppKit.framework/: Info.plist
Frameworks/AppKit.framework/Headers/: AppKit.h
Frameworks/AppServices.framework/: Info.plist
Frameworks/AppServices.framework/Headers/: AppServices.h
Frameworks/Metal.framework/: Info.plist
Frameworks/Metal.framework/Headers/: Metal.h
Frameworks/QuartzCore.framework/: Info.plist
Frameworks/QuartzCore.framework/Headers/: QuartzCore.h
native/: DisplayEnumerator.swift  GpuEnumerator.swift  client_bridge.c  compositor_host.c  compositor_signals.m  iosurface_shm_bridge.c  iosurface_transformer.c  kqueue_event_loop.c  objc_runtime_bridge.c  shm_sync.c  vk_debug_messenger.cpp  vk_instance_extensions.cpp  vk_metal_surface.cpp
src/bridge/: compositor.rs  mod.rs  swizzle.rs
src/frameworks/: appkit.rs  metal_sys.rs  mod.rs  opengl_sys.rs  quartz_core.rs
src/shader_jit/: air_parser.rs  mod.rs  transforms.rs
src/vulkan_backend/: mod.rs  resource.rs  state_machine.rs  swapchain.rs
tools/: air_header_inspect.py  make_app_bundle.py  repo_stats.py  surface_monitor.py  vk_layer_manifest_check.py
