[package]
name = "vulkan-cocoa-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Vulkan-on-Darwin compositor backend for ravynOS"

[lib]
name = "vulkan_cocoa_core_bridge"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"] 

[dependencies]
ash = { version = "0.38", features = ["linked"] }
raw-window-handle = "0.6"
thiserror = "2.0"
log = "0.4"
bitflags = "2.0"
parking_lot = "0.12"
ctor = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = "0.2.2"
objc2-app-kit = "0.2.2"
objc2-quartz-core = "0.2.2"
core-foundation = "0.10"
mach2 = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
panic-immediate-abort = true
strip = "all"
incremental = false

[profile.dev]
opt-level = 1
